--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,111 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:is(.dark *));
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+
+:root {
+  --background: 82 59% 98%;
+  --foreground: 82 62% 3%;
+  --muted: 202 26% 94%;
+  --muted-foreground: 202 12% 33%;
+  --popover: 82 59% 98%;
+  --popover-foreground: 82 62% 3%;
+  --card: 82 59% 98%;
+  --card-foreground: 82 62% 3%;
+  --border: 82 7% 91%;
+  --input: 82 7% 91%;
+  --primary: 82 82% 47%;
+  --primary-foreground: 82 82% 7%;
+  --secondary: 202 82% 47%;
+  --secondary-foreground: 0 0% 100%;
+  --accent: 322 82% 47%;
+  --accent-foreground: 0 0% 100%;
+  --destructive: 11 87% 39%;
+  --destructive-foreground: 0 0% 100%;
+  --ring: 82 82% 47%;
+  --chart-1: 82 82% 47%;
+  --chart-2: 202 82% 47%;
+  --chart-3: 322 82% 47%;
+  --chart-4: 202 82% 50%;
+  --chart-5: 82 85% 47%;
+  --radius: 0.5rem;
+}
+
+.dark {
+  --background: 82 36% 3%;
+  --foreground: 82 34% 97%;
+  --muted: 202 26% 6%;
+  --muted-foreground: 202 12% 67%;
+  --popover: 82 36% 3%;
+  --popover-foreground: 82 34% 97%;
+  --card: 82 36% 3%;
+  --card-foreground: 82 34% 97%;
+  --border: 82 7% 14%;
+  --input: 82 7% 14%;
+  --primary: 82 82% 47%;
+  --primary-foreground: 82 82% 7%;
+  --secondary: 322.04 81.67% 47.06%;
+  --secondary-foreground: 0 0% 100%;
+  --accent: 322 82% 47%;
+  --accent-foreground: 0 0% 100%;
+  --destructive: 0 72.22% 50.59%;
+  --destructive-foreground: 0 0% 100%;
+  --ring: 82 82% 47%;
+  --chart-1: 82 82% 47%;
+  --chart-2: 202 82% 47%;
+  --chart-3: 322 82% 47%;
+  --chart-4: 202 82% 50%;
+  --chart-5: 82 85% 47%;
+}
+
+  
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    @apply bg-background text-foreground;
+  }
 }
