Add home page, sidebar and acessbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -43,63 +43,74 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
-
 :root {
-  --background: 82 59% 98%;
-  --foreground: 82 62% 3%;
-  --muted: 202 26% 94%;
-  --muted-foreground: 202 12% 33%;
-  --popover: 82 59% 98%;
-  --popover-foreground: 82 62% 3%;
-  --card: 82 59% 98%;
-  --card-foreground: 82 62% 3%;
-  --border: 82 7% 91%;
-  --input: 82 7% 91%;
-  --primary: 82 82% 47%;
-  --primary-foreground: 82 82% 7%;
-  --secondary: 202 82% 47%;
-  --secondary-foreground: 0 0% 100%;
-  --accent: 322 82% 47%;
-  --accent-foreground: 0 0% 100%;
-  --destructive: 11 87% 39%;
-  --destructive-foreground: 0 0% 100%;
-  --ring: 82 82% 47%;
-  --chart-1: 82 82% 47%;
-  --chart-2: 202 82% 47%;
-  --chart-3: 322 82% 47%;
-  --chart-4: 202 82% 50%;
-  --chart-5: 82 85% 47%;
-  --radius: 0.5rem;
+  --radius: 0.3rem;
+  --background: oklch(1 0 0);
+  --foreground: oklch(0.141 0.005 285.823);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.141 0.005 285.823);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.141 0.005 285.823);
+  --primary: oklch(0.606 0.25 292.717);
+  --primary-foreground: oklch(0.969 0.016 293.756);
+  --secondary: oklch(0.967 0.001 286.375);
+  --secondary-foreground: oklch(0.21 0.006 285.885);
+  --muted: oklch(0.967 0.001 286.375);
+  --muted-foreground: oklch(0.552 0.016 285.938);
+  --accent: oklch(0.967 0.001 286.375);
+  --accent-foreground: oklch(0.21 0.006 285.885);
+  --destructive: oklch(0.577 0.245 27.325);
+  --border: oklch(0.92 0.004 286.32);
+  --input: oklch(0.92 0.004 286.32);
+  --ring: oklch(0.606 0.25 292.717);
+  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-5: oklch(0.769 0.188 70.08);
+  --sidebar: oklch(0.985 0 0);
+  --sidebar-foreground: oklch(0.141 0.005 285.823);
+  --sidebar-primary: oklch(0.606 0.25 292.717);
+  --sidebar-primary-foreground: oklch(0.969 0.016 293.756);
+  --sidebar-accent: oklch(0.967 0.001 286.375);
+  --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
+  --sidebar-border: oklch(0.92 0.004 286.32);
+  --sidebar-ring: oklch(0.606 0.25 292.717);
 }
 
 .dark {
-  --background: 82 36% 3%;
-  --foreground: 82 34% 97%;
-  --muted: 202 26% 6%;
-  --muted-foreground: 202 12% 67%;
-  --popover: 82 36% 3%;
-  --popover-foreground: 82 34% 97%;
-  --card: 82 36% 3%;
-  --card-foreground: 82 34% 97%;
-  --border: 82 7% 14%;
-  --input: 82 7% 14%;
-  --primary: 82 82% 47%;
-  --primary-foreground: 82 82% 7%;
-  --secondary: 322.04 81.67% 47.06%;
-  --secondary-foreground: 0 0% 100%;
-  --accent: 322 82% 47%;
-  --accent-foreground: 0 0% 100%;
-  --destructive: 0 72.22% 50.59%;
-  --destructive-foreground: 0 0% 100%;
-  --ring: 82 82% 47%;
-  --chart-1: 82 82% 47%;
-  --chart-2: 202 82% 47%;
-  --chart-3: 322 82% 47%;
-  --chart-4: 202 82% 50%;
-  --chart-5: 82 85% 47%;
+  --background: oklch(0.141 0.005 285.823);
+  --foreground: oklch(0.985 0 0);
+  --card: oklch(0.21 0.006 285.885);
+  --card-foreground: oklch(0.985 0 0);
+  --popover: oklch(0.21 0.006 285.885);
+  --popover-foreground: oklch(0.985 0 0);
+  --primary: oklch(0.541 0.281 293.009);
+  --primary-foreground: oklch(0.969 0.016 293.756);
+  --secondary: oklch(0.274 0.006 286.033);
+  --secondary-foreground: oklch(0.985 0 0);
+  --muted: oklch(0.274 0.006 286.033);
+  --muted-foreground: oklch(0.705 0.015 286.067);
+  --accent: oklch(0.274 0.006 286.033);
+  --accent-foreground: oklch(0.985 0 0);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(0.541 0.281 293.009);
+  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-2: oklch(0.696 0.17 162.48);
+  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-4: oklch(0.627 0.265 303.9);
+  --chart-5: oklch(0.645 0.246 16.439);
+  --sidebar: oklch(0.21 0.006 285.885);
+  --sidebar-foreground: oklch(0.985 0 0);
+  --sidebar-primary: oklch(0.541 0.281 293.009);
+  --sidebar-primary-foreground: oklch(0.969 0.016 293.756);
+  --sidebar-accent: oklch(0.274 0.006 286.033);
+  --sidebar-accent-foreground: oklch(0.985 0 0);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(0.541 0.281 293.009);
 }
-
-  
 
 @layer base {
   * {
@@ -108,4 +119,10 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.cl-avatarBox {
+  width: 2.35rem;
+  height: 2.35rem;
+  margin: 0.5rem;
 }
